# slice99

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  menudata.js  slice99.h  slice99_8h.html  slice99_8h_source.html  structSlice99.html  tests.c
.github/workflows/: c-cpp.yml
docs/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  menudata.js  slice99_8h.html  slice99_8h__incl.md5  slice99_8h_source.html  structSlice99.html  structSlice99Maybe.html  structSlice99Maybe__coll__graph.md5
docs/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  searchdata.js  variables_1.js  variables_4.js
examples/: CMakeLists.txt  demo.c
scripts/: check-fmt.sh  fmt.sh  test-examples.sh  test.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
tests/: CMakeLists.txt  assert_algebraic.h  test.c
